--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,29 @@ body {
   padding: 2em;
   font-family: -apple-system, BlinkMacSystemFont, “Segoe UI”, Roboto, Helvetica, Arial, sans-serif, “Apple Color Emoji”, “Segoe UI Emoji”, “Segoe UI Symbol”;
 }
+
+.input-text {
+  border-radius: 3px;
+  padding: 8px 12px;
+  margin: 10px;
+  width: auto;
+  box-sizing: border-box;
+  border: 3px solid #ccc;
+  font: 1.2em "Fira Sans", sans-serif;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+}
+
+.input-text:focus {
+  border: 3px solid grey;
+}
+
+.input-form {
+  margin: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+
