--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -1,15 +1,16 @@
-<div class="content-body">
+<div class="content-body" *ngIf="!tableDataService.showUpdatePage">
     <h1>{{title}}</h1>
 
     <div class="input-form">
-        <input placeholder="input columns size" type="text" [ngClass]="{'err-input':inputErr,'input-text':!inputErr}"
-               [(ngModel)]="monthService.addColumnText" (input)="setColumn()"/>
-        <input type="text" class="input-text" [(ngModel)]="monthService.search" (keydown.enter)="onSearch()"/>
+        <!--<input placeholder="input columns size" type="text"
+               [ngClass]="{'err-input':inputErr,'input-text':!inputErr}"
+               [(ngModel)]="tableDataService.addColumnText" (input)="setColumn()"/>-->
+        <input type="text" class="input-text" [(ngModel)]="tableDataService.search"
+               (keydown.enter)="onSearch()"/>
         <button class="button button-search" (click)="onSearch()">search</button>
     </div>
-    <p-table [columns]="cols" [value]="months" [scrollable]="true"
-             [resizableColumns]="true" selectionMode="single" [(selection)]="selectRow" dataKey="id"
-             (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+    <p-table [columns]="cols" [value]="tableDataService.mainData" [scrollable]="true"
+             [resizableColumns]="true" selectionMode="single" [(selection)]="selectRow" dataKey="id">
         <ng-template pTemplate="colgroup" let-columns>
             <colgroup>
                 <col *ngFor="let col of columns" [style.width]="col.width">
@@ -32,12 +33,13 @@
     </p-table>
     <p-confirmDialog [style]="{width: '30vw'}" [baseZIndex]="10000"></p-confirmDialog>
     <div class="button-panel">
-        <button type="button" (click)="deleteMonth()" pButton class="ui-button-danger"
-                icon="pi pi-trash" [disabled]="selectRow.id<=12" label="delete"></button>
-        <button routerLink="/createAddDelete" type="button" pButton icon="pi pi-plus"
+        <button type="button" (click)="deleteData()" pButton class="ui-button-danger"
+                icon="pi pi-trash" [disabled]="selectRow.id<=startData.length" label="delete"></button>
+        <button (click)="tableDataService.showUpdatePage=true" type="button" pButton icon="pi pi-plus"
                 label="create"></button>
-        <button type="button" [disabled]="selectRow.id<=12" pButton icon="pi pi-pencil"
-                class="ui-button-success" (click)="changeMonth()"  label="change"></button>
+        <button type="button" [disabled]="selectRow.id<=startData.length" pButton icon="pi pi-pencil"
+                class="ui-button-success" (click)="changeData()" label="change"></button>
     </div>
 
 </div>
+<app-create-add *ngIf="tableDataService.showUpdatePage"></app-create-add>
