--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -1,16 +1,30 @@
 <div class="content-body" *ngIf="!tableDataService.showUpdatePage">
-    <h1>{{title}}</h1>
-
-    <div class="input-form">
-        <!--<input placeholder="input columns size" type="text"
+    <!--<div class="input-form">
+        <input placeholder="input columns size" type="text"
                [ngClass]="{'err-input':inputErr,'input-text':!inputErr}"
-               [(ngModel)]="tableDataService.addColumnText" (input)="setColumn()"/>-->
+               [(ngModel)]="tableDataService.addColumnText" (input)="setColumn()"/>
         <input type="text" class="input-text" [(ngModel)]="tableDataService.search"
                (keydown.enter)="onSearch()"/>
         <button class="button button-search" (click)="onSearch()">search</button>
+    </div>-->
+
+    <div class="box">
+        <app-filter-box></app-filter-box>
+        <div class="shadow box-item ">
+            <p-multiSelect [options]="columns" [(ngModel)]="_selectedColumns" optionLabel="header"
+                           selectedItemsLabel=" {0} columns selected"
+                           [style]="{minWidth:'200px'}"
+                           placeholder="Choose Columns"></p-multiSelect>
+        </div>
+
     </div>
-    <p-table [columns]="cols" [value]="tableDataService.mainData" [scrollable]="true"
-             [resizableColumns]="true" selectionMode="single" [(selection)]="selectRow" dataKey="id">
+    <p-table [paginator]="true" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+             style="min-height: 680px"
+             [rows]="20" [showCurrentPageReport]="true" [rowsPerPageOptions]="[20,30,50]" [loading]="loading"
+             [columns]="_selectedColumns" [value]="tableDataService.mainData" [scrollable]="true"
+             scrollHeight="710px"
+             [resizableColumns]="true" selectionMode="single"
+             dataKey="id">
         <ng-template pTemplate="colgroup" let-columns>
             <colgroup>
                 <col *ngFor="let col of columns" [style.width]="col.width">
@@ -18,19 +32,26 @@
         </ng-template>
         <ng-template pTemplate="header" let-columns>
             <tr>
-                <th *ngFor="let col of columns" pResizableColumn>
+                <th *ngFor="let col of columns" pResizableColumn [pSortableColumn]="col.header">
                     {{col.header}}
+                    <p-sortIcon [field]="col.header"></p-sortIcon>
                 </th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-rowData let-columns="columns">
-            <tr [pSelectableRow]="rowData">
+            <tr>
                 <td *ngFor="let col of columns" class="ui-resizable-column" pResizableColumn>
                     {{rowData[col.field]}}
                 </td>
             </tr>
         </ng-template>
+        <ng-template pTemplate="emptymessage">
+            <tr>
+                <td colspan="6">No customers found.</td>
+            </tr>
+        </ng-template>
     </p-table>
+    <!--
     <p-confirmDialog [style]="{width: '30vw'}" [baseZIndex]="10000"></p-confirmDialog>
     <div class="button-panel">
         <button type="button" (click)="deleteData()" pButton class="ui-button-danger"
@@ -39,7 +60,7 @@
                 label="create"></button>
         <button type="button" [disabled]="selectRow.id<=startData.length" pButton icon="pi pi-pencil"
                 class="ui-button-success" (click)="changeData()" label="change"></button>
-    </div>
+    </div>-->
 
 </div>
 <app-create-add *ngIf="tableDataService.showUpdatePage"></app-create-add>
