--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,5 +1,5 @@
-<p-menubar [model]="items" [style]="{
-minWidth:'100%', position:'absolute',left:'0px',top:'0px'}"
+<p-menubar id="openNav" [model]="items" [style]="{
+minWidth:'100%', height:'53px',position:'absolute',left:'0px',top:'0px'}"
 
 >
     <p-button *ngIf="apiService.getUserData()!==null && apiService.getUserData()!==undefined"
@@ -14,16 +14,34 @@ minWidth:'100%', position:'absolute',left:'0px',top:'0px'}"
               class="p-button-success p-button-text"
               [label]=" 'loginPage.login' | translate"></p-button>
 </p-menubar>
-<p-sidebar [(visible)]="display">
-    <h3>{{'loginPage.menu' | translate}}</h3>
+<!--<p-sidebar [modal]="false" [(visible)]="display">
+    <h2>{{'loginPage.menu' | translate}}</h2>
     <hr class="hr-style"/>
     <p-listbox
+
             [style]="{minWidth:'100%',borderColor:'white',
             position:'absolute',left:'0px',fontSize:'1.5em'}"
             [options]=" [ {name:  'loginPage.listOrders' | translate, code: 'NY'}]" [(ngModel)]="cities1"
             optionLabel="name"></p-listbox>
 
-</p-sidebar>
+</p-sidebar>-->
+
+<div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none;
+position:absolute;
+left: 0px;
+width: 15%;
+top:53px" id="mySidebar">
+
+    <h3 style="position:relative; left: 10px">{{'loginPage.menu' | translate}}</h3>
+    <hr class="hr-style"/>
+    <p-listbox
+
+            [style]="{minWidth:'100%',borderColor:'white',
+            position:'absolute',left:'0px',fontSize:'1.5em'}"
+            [options]=" [ {name:  'loginPage.listOrders' | translate, code: 'NY'}]" [(ngModel)]="cities1"
+            optionLabel="name"></p-listbox>
+</div>
+
 <br/>
 <br/>
 <br/>
