--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -32,7 +32,7 @@ minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'}"
     <hr class="hr-style" style="    z-index: 2;"/>
     <p-listbox
             id="mySidebarList"
-            [style]="{minWidth:'100%',borderColor:'white',zIndex:'2',
+            [style]="{minWidth:'100%',borderColor:'white',zIndex:'2',width:'100%',
             position:'absolute',left:'0px',fontSize:'1.5em'}"
             [options]=" [ {name:  'loginPage.listOrders' | translate, code: 'NY'}]" [(ngModel)]="cities1"
             optionLabel="name"></p-listbox>
