--- a/src/app/table-page/table-page.component.html
+++ b/src/app/table-page/table-page.component.html
@@ -42,7 +42,7 @@
                                    dropdownIcon="pi pi-microsoft"
                                    scrollHeight="700px"
 
-                                   [style]="{width:'0px',height:'0px',fontSize:'1.7rem', position:'absolute', left:'250px',top:'35px'}"
+                                   [style]="{width:'0px',height:'0px',fontSize:'1.7rem', position:'absolute', right:'20px',top:'25px'}"
                                    placeholder="{{'loginPage.ChooseColumns' | translate}}"></p-multiSelect>
                 </div>
         </ng-template>
