--- a/src/app/menu-bar/menu-bar.component.html
+++ b/src/app/menu-bar/menu-bar.component.html
@@ -1,6 +1,6 @@
-<p-menubar id="openNav" [model]="items" [style]="{zIndex:'999',
-minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'}"
-
+<p-menubar id="openNav" [model]="(apiService.getUserData()!==null && apiService.getUserData()!==undefined)?items:itemsNoLogin"
+           [style]="{zIndex:'999',
+minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'} "
 >
     <p-button *ngIf="apiService.getUserData()!==null && apiService.getUserData()!==undefined"
               type="text" [style]="{minWidth:'80px',minHeight:'40px',
@@ -14,6 +14,7 @@ minWidth:'100%', height:'53px',position:'fixed',left:'0px',top:'0px'}"
               class="p-button-success p-button-text"
               [label]=" 'loginPage.login' | translate"></p-button>
 </p-menubar>
+
 <!--<p-sidebar [modal]="false" [(visible)]="display">
     <h2>{{'loginPage.menu' | translate}}</h2>
     <hr class="hr-style"/>
