--- a/src/app/filters/customer-filter/customer-filter.component.html
+++ b/src/app/filters/customer-filter/customer-filter.component.html
@@ -1,1 +1,10 @@
-<p>customer-filter works!</p>
+<div class="filter-component">
+    <h3 class="title" >{{'loginPage.datePeriod' | translate}}</h3>
+    <p-dropdown  style="margin: 5px 5px 10px;position: relative;bottom: 20px"
+                 [placeholder]="'loginPage.SelectName' | translate"
+                 [showClear]="true"  [filter]="true"
+                 (onChange)="changeState()"  [options]="customers" [(ngModel)]="customer" optionLabel="name"></p-dropdown>
+
+
+
+</div>
