--- a/src/app/filters/date-filter/date-filter.component.html
+++ b/src/app/filters/date-filter/date-filter.component.html
@@ -1,7 +1,7 @@
 <div class="filter-component">
     <h3 class="title">{{'loginPage.datePeriod' | translate}}</h3>
 
-    <div style="height:30px;position: relative;top:-10px; display: flex;flex-direction: row;justify-content: center;align-content: center">
+    <div style="height:30px;position: relative;top:-30px; display: flex;flex-direction: row;justify-content: center;align-content: center">
 
 
             <p-radioButton name="groupname1" inputId="val4" [value]="1"
@@ -19,14 +19,14 @@
         <label for="val2">закр.</label>
     </div>
 
-    <div style="display: flex;flex-direction: row;justify-content: center;width: auto">
-        <p-calendar (ngModelChange)="changePeriod()" [(ngModel)]="dateFrom" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
+    <div style="position: relative;top:-30px;display: flex;flex-direction: row;justify-content: center;width: auto">
+        <p-calendar (click)="changePeriod()" [(ngModel)]="dateFrom" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
                     style="margin:5% "></p-calendar>
-        <p-calendar (ngModelChange)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
+        <p-calendar (click)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===1" dateFormat="yy-mm-dd"
                     style="margin:5% "></p-calendar>
-        <p-calendar (ngModelChange)="changePeriod()" [(ngModel)]="dateFrom" *ngIf="menuChange===2" view="month"
-                    [yearNavigator]="true" dateFormat="yy-mm-dd" style="margin:5% "></p-calendar>
-        <p-calendar (ngModelChange)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===2" view="month"
-                    [yearNavigator]="true" dateFormat="yy-mm-dd" style="margin:5% "></p-calendar>
+        <p-calendar (click)="changePeriod()" [(ngModel)]="dateFrom" *ngIf="menuChange===2" view="month"
+                    dateFormat="yy-mm-dd" style="margin:5% "></p-calendar>
+        <p-calendar (click)="changePeriod()" [(ngModel)]="dateTo" *ngIf="menuChange===2" view="month"
+                     dateFormat="yy-mm-dd" style="margin:5% "></p-calendar>
     </div>
 </div>
