--- a/src/app/filters/payed-filter/payed-filter.component.html
+++ b/src/app/filters/payed-filter/payed-filter.component.html
@@ -1,7 +1,8 @@
 <div class="filter-component">
     <h3 class="title" >{{'loginPage.datePeriod' | translate}}</h3>
     <p-dropdown  style="margin: 5px 5px 10px;position: relative;bottom: 20px"
-            (onChange)="changeState()"  [options]="states" [(ngModel)]="payed" optionLabel="name"></p-dropdown>
+            (onChange)="changeState()"  [showClear]="true"   [filter]="true"
+                 [options]="states" [(ngModel)]="payed" optionLabel="name"></p-dropdown>
 
 
 
